preparation for initial run

--- a/scripts/join_samples_and_files_tables.ipynb
+++ b/scripts/join_samples_and_files_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/cerebis/git/metapigs_work/metapigs/scripts'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = pd.read_csv('fq_well_and_plate.txt', sep=' ', names=['DNA_plate','DNA_well','filename'])\n",
-    "runs = pd.read_csv('output.csv', sep='\\t')"
+    "files = pd.read_csv('../../fq_well_and_plate.txt', sep=' ', names=['DNA_plate','DNA_well','filename'])\n",
+    "#runs = pd.read_csv('output.csv', sep='\\t')"
    ]
   },
   {
@@ -2219,21 +2239,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
