further cleanup prior to initial run

--- a/scripts/complete_join.ipynb
+++ b/scripts/complete_join.ipynb
@@ -208,7 +208,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
+       "<p>5 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -226,12 +226,12 @@
        "3  Gut microflora metagenomics       2017-01-31  Host- gut      Faecal    \n",
        "4  Gut microflora metagenomics       2017-01-31  Host- gut      Faecal    \n",
        "\n",
-       "  *env_material   *geo_loc_name    *host    ...    perturbation  \\\n",
-       "0       Faecal   NSW, Australia  Porcine    ...             NaN   \n",
-       "1       Faecal   NSW, Australia  Porcine    ...             NaN   \n",
-       "2       Faecal   NSW, Australia  Porcine    ...             NaN   \n",
-       "3       Faecal   NSW, Australia  Porcine    ...             NaN   \n",
-       "4       Faecal   NSW, Australia  Porcine    ...             NaN   \n",
+       "  *env_material   *geo_loc_name    *host    ...     perturbation  \\\n",
+       "0       Faecal   NSW, Australia  Porcine    ...              NaN   \n",
+       "1       Faecal   NSW, Australia  Porcine    ...              NaN   \n",
+       "2       Faecal   NSW, Australia  Porcine    ...              NaN   \n",
+       "3       Faecal   NSW, Australia  Porcine    ...              NaN   \n",
+       "4       Faecal   NSW, Australia  Porcine    ...              NaN   \n",
        "\n",
        "   samp_collect_device samp_mat_process samp_size samp_store_temp  \\\n",
        "0                  NaN              NaN       NaN            -80C   \n",
@@ -240,14 +240,14 @@
        "3                  NaN              NaN       NaN            -80C   \n",
        "4                  NaN              NaN       NaN            -80C   \n",
        "\n",
-       "  samp_vol_we_dna_ext description PigPen Cohort Dysentery  \n",
-       "0                 NaN         NaN     1A    NaN       0.0  \n",
-       "1                 NaN         NaN     1A    NaN       0.0  \n",
-       "2                 NaN         NaN     1A    NaN       0.0  \n",
-       "3                 NaN         NaN     1A    NaN       0.0  \n",
-       "4                 NaN         NaN     1A    NaN       0.0  \n",
+       "  samp_vol_we_dna_ext description PigPen Cohort  Dysentery  \n",
+       "0                 NaN         NaN     1A    NaN        0.0  \n",
+       "1                 NaN         NaN     1A    NaN        0.0  \n",
+       "2                 NaN         NaN     1A    NaN        0.0  \n",
+       "3                 NaN         NaN     1A    NaN        0.0  \n",
+       "4                 NaN         NaN     1A    NaN        0.0  \n",
        "\n",
-       "[5 rows x 30 columns]"
+       "[5 rows x 29 columns]"
       ]
      },
      "execution_count": 2,
@@ -658,7 +658,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>911 rows × 36 columns</p>\n",
+       "<p>911 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -676,12 +676,12 @@
        "920  Laboratory - UTS              NaT        Lab     negative control   \n",
        "921  Laboratory - UTS              NaT        Lab     negative control   \n",
        "\n",
-       "           *env_material   *geo_loc_name *host    ...    description  PigPen  \\\n",
-       "0    Probiotic ColiGuard  NSW, Australia   NaN    ...            NaN     NaN   \n",
-       "1    Probiotic ColiGuard  NSW, Australia   NaN    ...            NaN     NaN   \n",
-       "..                   ...             ...   ...    ...            ...     ...   \n",
-       "920     negative control  NSW, Australia   NaN    ...            NaN     NaN   \n",
-       "921     negative control  NSW, Australia   NaN    ...            NaN     NaN   \n",
+       "           *env_material   *geo_loc_name *host    ...     description  PigPen  \\\n",
+       "0    Probiotic ColiGuard  NSW, Australia   NaN    ...             NaN     NaN   \n",
+       "1    Probiotic ColiGuard  NSW, Australia   NaN    ...             NaN     NaN   \n",
+       "..                   ...             ...   ...    ...             ...     ...   \n",
+       "920     negative control  NSW, Australia   NaN    ...             NaN     NaN   \n",
+       "921     negative control  NSW, Australia   NaN    ...             NaN     NaN   \n",
        "\n",
        "    Cohort Dysentery elution plate number well position date of sample  \\\n",
        "0      NaN       NaN                   P3            H1         18Ja24   \n",
@@ -690,14 +690,14 @@
        "920    NaN       NaN                  P10           D10            NaN   \n",
        "921    NaN       NaN                  P10            G6            NaN   \n",
        "\n",
-       "                pig ID      alt_sample_name replicate  \n",
-       "0         ColiGuard_P3  ColiGuard-180124-01         1  \n",
-       "1         ColiGuard_P4  ColiGuard-180124-02         2  \n",
-       "..                 ...                  ...       ...  \n",
-       "920    neg.control_P10   NegativeControl-18        18  \n",
-       "921  neg.control_P10.2   NegativeControl-19        19  \n",
+       "                pig ID      alt_sample_name  replicate  \n",
+       "0         ColiGuard_P3  ColiGuard-180124-01          1  \n",
+       "1         ColiGuard_P4  ColiGuard-180124-02          2  \n",
+       "..                 ...                  ...        ...  \n",
+       "920    neg.control_P10   NegativeControl-18         18  \n",
+       "921  neg.control_P10.2   NegativeControl-19         19  \n",
        "\n",
-       "[911 rows x 36 columns]"
+       "[911 rows x 35 columns]"
       ]
      },
      "execution_count": 6,
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "4    MON5838/MON5838_9/plate_1_A2_S9_R2_001.fastq.gz  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,11 +832,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out.to_csv('out.csv')"
+    "out.to_csv('../complete.csv', sep='\\t')"
    ]
   },
   {
