preparation for new run

--- a/scripts/complete_join.ipynb
+++ b/scripts/complete_join.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -44,15 +44,43 @@
     {
      "data": {
       "text/plain": [
-       "0    No treatment\n",
-       "1    No treatment\n",
-       "2    No treatment\n",
-       "3    No treatment\n",
-       "4    No treatment\n",
-       "Name: chem_administration, dtype: object"
+       "chem_administration\n",
+       "ColiGuard Day 10                    8\n",
+       "ColiGuard Day 14                   18\n",
+       "ColiGuard Day 3                     8\n",
+       "ColiGuard Day 7                    18\n",
+       "ColiGuard Day 8                     1\n",
+       "Control - Ex Placebo               52\n",
+       "Control - Placebo Day 10            8\n",
+       "Control - Placebo Day 14           18\n",
+       "Control - Placebo Day 3             8\n",
+       "Control - Placebo Day 6             6\n",
+       "Control - Placebo Day 7            18\n",
+       "D-scour Day 10                      9\n",
+       "D-scour Day 14                     18\n",
+       "D-scour Day 3                       8\n",
+       "D-scour Day 7                      18\n",
+       "D-scour Day 8                       2\n",
+       "Ex ColiGuard                       46\n",
+       "Ex ColiGuard                       12\n",
+       "Ex D-scour                         58\n",
+       "Ex Neomycin                       103\n",
+       "Ex Neomycin - ColiGuard Day 12      6\n",
+       "Ex Neomycin - ColiGuard Day 2      17\n",
+       "Ex Neomycin - ColiGuard Day 5       8\n",
+       "Ex Neomycin - ColiGuard Day 9      18\n",
+       "Ex Neomycin - D-scour Day 12        6\n",
+       "Ex Neomycin - D-scour Day 2        18\n",
+       "Ex Neomycin - D-scour Day 5         8\n",
+       "Ex Neomycin - D-scour Day 9        18\n",
+       "Ex Neomycin - Ex ColiGuard         52\n",
+       "Ex Neomycin - Ex D-scour           51\n",
+       "Neomycin Day 3                     24\n",
+       "No treatment                      222\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,12 +93,12 @@
     "# this results in the correct ordering of rows when sorted\n",
     "samples['*sample_name'] = samples['*sample_name'].str.replace('P([1-9](?:.2)?)$', lambda m: 'P0{}'.format(m.group(1)))\n",
     "print('There were {} rows in sample table'.format(len(samples)))\n",
-    "samples.chem_administration.head()"
+    "samples.groupby('chem_administration').size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +139,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A1</td>\n",
        "      <td>Fe21</td>\n",
        "      <td>14194</td>\n",
@@ -119,7 +147,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A2</td>\n",
        "      <td>Fe28</td>\n",
        "      <td>14286</td>\n",
@@ -127,7 +155,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A3</td>\n",
        "      <td>Fe21</td>\n",
        "      <td>29644</td>\n",
@@ -135,7 +163,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A4</td>\n",
        "      <td>Fe14</td>\n",
        "      <td>29898</td>\n",
@@ -143,7 +171,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A5</td>\n",
        "      <td>Fe21</td>\n",
        "      <td>29679</td>\n",
@@ -155,14 +183,14 @@
       ],
       "text/plain": [
        "  elution plate number well position date of sample pig ID date and pig ID\n",
-       "0                   P1            A1           Fe21  14194      Fe21/14194\n",
-       "1                   P1            A2           Fe28  14286      Fe28/14286\n",
-       "2                   P1            A3           Fe21  29644      Fe21/29644\n",
-       "3                   P1            A4           Fe14  29898      Fe14/29898\n",
-       "4                   P1            A5           Fe21  29679      Fe21/29679"
+       "0              plate_1            A1           Fe21  14194      Fe21/14194\n",
+       "1              plate_1            A2           Fe28  14286      Fe28/14286\n",
+       "2              plate_1            A3           Fe21  29644      Fe21/29644\n",
+       "3              plate_1            A4           Fe14  29898      Fe14/29898\n",
+       "4              plate_1            A5           Fe21  29679      Fe21/29679"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -297,33 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DNA_plate  DNA_well\n",
-       "P3         H1          No treatment\n",
-       "P4         D3          No treatment\n",
-       "                           ...     \n",
-       "P10        D10         No treatment\n",
-       "           G6          No treatment\n",
-       "Name: chem_administration, Length: 911, dtype: object"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out.chem_administration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +334,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DNA_plate</th>\n",
+       "      <th>DNA_well</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>P10\\tA10\\tcombined_new/plate_10_A10.r1.fastq.gz</th>\n",
+       "      <th>NaN</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P10\\tA10\\tcombined_new/plate_10_A10.r2.fastq.gz</th>\n",
+       "      <th>NaN</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P10\\tA11\\tcombined_new/plate_10_A11.r1.fastq.gz</th>\n",
+       "      <th>NaN</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P10\\tA11\\tcombined_new/plate_10_A11.r2.fastq.gz</th>\n",
+       "      <th>NaN</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P10\\tA12\\tcombined_new/plate_10_A12.r1.fastq.gz</th>\n",
+       "      <th>NaN</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                          filename\n",
+       "DNA_plate                                       DNA_well          \n",
+       "P10\\tA10\\tcombined_new/plate_10_A10.r1.fastq.gz NaN            NaN\n",
+       "P10\\tA10\\tcombined_new/plate_10_A10.r2.fastq.gz NaN            NaN\n",
+       "P10\\tA11\\tcombined_new/plate_10_A11.r1.fastq.gz NaN            NaN\n",
+       "P10\\tA11\\tcombined_new/plate_10_A11.r2.fastq.gz NaN            NaN\n",
+       "P10\\tA12\\tcombined_new/plate_10_A12.r1.fastq.gz NaN            NaN"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -372,66 +458,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A1</td>\n",
-       "      <td>MON5838/MON5838_1/plate_1_A1_S1_R1_001.fastq.gz</td>\n",
-       "      <td>MON5838/MON5838_1/plate_1_A1_S1_R2_001.fastq.gz</td>\n",
+       "      <td>combined_new/plate_1_A1.r1.fastq.gz</td>\n",
+       "      <td>combined_new/plate_1_A1.r2.fastq.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A10</td>\n",
-       "      <td>MON5838/MON5838_73/plate_1_A10_S73_R1_001.fast...</td>\n",
-       "      <td>MON5838/MON5838_73/plate_1_A10_S73_R2_001.fast...</td>\n",
+       "      <td>combined_new/plate_1_A10.r1.fastq.gz</td>\n",
+       "      <td>combined_new/plate_1_A10.r2.fastq.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A11</td>\n",
-       "      <td>MON5838/MON5838_81/plate_1_A11_S81_R1_001.fast...</td>\n",
-       "      <td>MON5838/MON5838_81/plate_1_A11_S81_R2_001.fast...</td>\n",
+       "      <td>combined_new/plate_1_A11.r1.fastq.gz</td>\n",
+       "      <td>combined_new/plate_1_A11.r2.fastq.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A12</td>\n",
-       "      <td>MON5838/MON5838_89/plate_1_A12_S89_R1_001.fast...</td>\n",
-       "      <td>MON5838/MON5838_89/plate_1_A12_S89_R2_001.fast...</td>\n",
+       "      <td>combined_new/plate_1_A12.r1.fastq.gz</td>\n",
+       "      <td>combined_new/plate_1_A12.r2.fastq.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>P1</td>\n",
+       "      <td>plate_1</td>\n",
        "      <td>A2</td>\n",
-       "      <td>MON5838/MON5838_9/plate_1_A2_S9_R1_001.fastq.gz</td>\n",
-       "      <td>MON5838/MON5838_9/plate_1_A2_S9_R2_001.fastq.gz</td>\n",
+       "      <td>combined_new/plate_1_A2.r1.fastq.gz</td>\n",
+       "      <td>combined_new/plate_1_A2.r2.fastq.gz</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  DNA_plate DNA_well                                        r1_filename  \\\n",
-       "0        P1       A1    MON5838/MON5838_1/plate_1_A1_S1_R1_001.fastq.gz   \n",
-       "1        P1      A10  MON5838/MON5838_73/plate_1_A10_S73_R1_001.fast...   \n",
-       "2        P1      A11  MON5838/MON5838_81/plate_1_A11_S81_R1_001.fast...   \n",
-       "3        P1      A12  MON5838/MON5838_89/plate_1_A12_S89_R1_001.fast...   \n",
-       "4        P1       A2    MON5838/MON5838_9/plate_1_A2_S9_R1_001.fastq.gz   \n",
+       "  DNA_plate DNA_well                           r1_filename  \\\n",
+       "0   plate_1       A1   combined_new/plate_1_A1.r1.fastq.gz   \n",
+       "1   plate_1      A10  combined_new/plate_1_A10.r1.fastq.gz   \n",
+       "2   plate_1      A11  combined_new/plate_1_A11.r1.fastq.gz   \n",
+       "3   plate_1      A12  combined_new/plate_1_A12.r1.fastq.gz   \n",
+       "4   plate_1       A2   combined_new/plate_1_A2.r1.fastq.gz   \n",
        "\n",
-       "                                         r2_filename  \n",
-       "0    MON5838/MON5838_1/plate_1_A1_S1_R2_001.fastq.gz  \n",
-       "1  MON5838/MON5838_73/plate_1_A10_S73_R2_001.fast...  \n",
-       "2  MON5838/MON5838_81/plate_1_A11_S81_R2_001.fast...  \n",
-       "3  MON5838/MON5838_89/plate_1_A12_S89_R2_001.fast...  \n",
-       "4    MON5838/MON5838_9/plate_1_A2_S9_R2_001.fastq.gz  "
+       "                            r2_filename  \n",
+       "0   combined_new/plate_1_A1.r2.fastq.gz  \n",
+       "1  combined_new/plate_1_A10.r2.fastq.gz  \n",
+       "2  combined_new/plate_1_A11.r2.fastq.gz  \n",
+       "3  combined_new/plate_1_A12.r2.fastq.gz  \n",
+       "4   combined_new/plate_1_A2.r2.fastq.gz  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files = pd.read_csv('../source_data/fq_well_and_plate.txt', sep=' ', names=['DNA_plate','DNA_well','filename'], index_col=['DNA_plate', 'DNA_well'])\n",
+    "files = pd.read_csv('../source_data/fq_well_and_plate_new.txt', sep=' ', names=['DNA_plate','DNA_well','filename'], index_col=['DNA_plate', 'DNA_well'])\n",
     "# we will convert this to one row per read-pair, rather than one row for R1 and one for R2\n",
     "files = files.groupby(['DNA_plate', 'DNA_well']).agg(['first', 'last'])\n",
     "# convert the pandas group to a new dataframe\n",
@@ -442,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,12 +554,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "out.to_csv('../complete_new.tsv', sep='\\t', encoding = 'utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "isolation_source\n",
+       "9128       1\n",
+       "14159     10\n",
+       "          ..\n",
+       "Y08843     1\n",
+       "Y09733     1\n",
+       "Length: 172, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -485,21 +595,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
